src/test/resources/valid/SubTestClass.java
import java.util.RandomAccess;

import io.higgs.spi.ProviderFor;

@ProviderFor(RandomAccess.class)
public class SubTestClass extends SuperClass {
	
}
