src/test/resources/invalid/InterfaceTestClass.java
import java.util.RandomAccess;

import io.higgs.spi.ProviderFor;

@ProviderFor(RandomAccess.class)
public interface InterfaceTestClass extends RandomAccess {
	
}
